# book_tlpi_notes

./: .gitignore  CMakeLists.txt  README.md  The_Linux_Programming_Interface.md  tlpi.md
apue/: readme  readme.md
apue/ch01/: dir.c  get_cmd_and_exec.c  mecho.c  mecho0.c  mypid.c
chapter04/fileio/: copy.c  seek_io.c  t_getopt.c
fileio/: CMakeLists.txt  bad_exclusive_open.c  copy.c  cp_hole.c  ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  t_getopt.c  tee.c
howlinuxworks/03/: fork-and-exec.c
howlinuxworks/04/: sched_nice.c
howlinuxworks/05/: cow.c  demand_paging.c  filemap.c  mmap.c  segv.c  vsz-rss.sh
howlinuxworks/06/: cache.c  read_twice.sh  test_cache.sh  test_write.sh  write.sh
lib/: error_functions.c  error_functions.h  tlpi_hdr.c  tlpi_hdr.h
resource/: ch04-fileio-hui.txt
test/: t1.c  t2.c  t3.c  t4.c  t5.c
test/01/: 01.c  03.c  04.c  05.c  06.c
test/04/: 01.c  02.c  03.c  04.c  05.c
util/: CMakeLists.txt  get_num.h
